Add files via upload
Updated to use Java 17